--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -77,7 +77,7 @@ select {
   background-color: #efefef;
   width: 100%;
   margin-right: auto;
-  padding:5px 5px;
+  padding: 5px 5px;
 }
 
 .ask_button {
@@ -110,18 +110,18 @@ select {
   margin-top: 20px;
   padding-top: 10px;
   width: 80%;
-  height:300px;
+  height: 300px;
   overflow: scroll;
 }
 .question_card:hover {
   transform: scale(1.03);
   box-shadow: 0px 8px 16px 0px rgba(92, 4, 4, 0.2);
-  border:none;
+  border: none;
 }
 
 .title_font {
   font-size: 12px;
-  color: rgb(66, 15, 12);
+  color: rgb(107, 11, 6);
   font-weight: bolder;
   margin-left: 10px;
   padding-top: 5px;
@@ -130,7 +130,7 @@ select {
   width: auto;
   white-space: break-spaces;
   overflow: hidden;
-  font-family: 'Fjalla One', sans-serif;
+  font-family: "Fjalla One", sans-serif;
 }
 
 .question_font {
@@ -139,7 +139,7 @@ select {
   color: rgb(10, 1, 1);
   margin-left: 10px;
   text-overflow: ellipsis;
-  width:80%;
+  width: 80%;
   white-space: wrap;
   transition: 200ms;
 }
@@ -224,7 +224,7 @@ select {
   background-color: rgb(70, 17, 17);
   border-radius: 10px;
   color: white;
-  margin-bottom:100px;
+  margin-bottom: 100px;
 }
 
 .Answer_form {
@@ -233,24 +233,24 @@ select {
 }
 
 .header_button {
-  font-size:small;
+  font-size: small;
   font-weight: bold;
   font-size: smaller;
   color: #a31607;
   display: contents;
-  border:none;
+  border: none;
 }
 
 .header_button:hover {
   border-top: 10px solid #ed4343;
   text-decoration: none;
 }
-.ask_hover{
+.ask_hover {
   transition: 200ms;
 }
-.ask_hover:hover{
-  text-decoration:none;
-  transform: scale(1.20);
+.ask_hover:hover {
+  text-decoration: none;
+  transform: scale(1.2);
 }
 .pagination_button {
   margin-left: 2px;
@@ -264,10 +264,25 @@ select {
   border: 1px solid #a31607;
 }
 
-.pagination_button:hover {
-  border-radius: 8px;
+.pagination > .active > a {
+  text-decoration: none;
+}
+
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
+.pagination > .active > span:focus {
   background-color: #a31607;
   color: white;
+}
+.pagination > li > a:hover {
+  background-color: rgb(199, 7, 7);
+  text-decoration: none;
+}
+
+.pagination_button:hover {
   cursor: pointer;
   text-decoration: none;
 }
@@ -374,9 +389,9 @@ span.answer_form_top_text {
   font-weight: bold;
   color: #2f3133;
   padding-bottom: 5px;
-} 
+}
 
- .comment_button {
+.comment_button {
   margin-left: auto;
   display: flex;
   color: #065794;
@@ -393,24 +408,25 @@ span.btn.btn-link.add_comment {
   margin-left: 10%;
 }
 
-.footer{
-  background-color: #efefef; 
+.footer {
+  background-color: #efefef;
+  cursor: pointer;
 }
 footer.page-footer {
   bottom: 0;
-  color:black;
+  color: black;
   text-decoration: none;
 }
 .text-center {
-  font-size:25px;
-  color:rgb(77, 8, 8)
+  font-size: 25px;
+  color: rgb(77, 8, 8);
 }
-.copyright{
-  color:rgb(77, 8, 8);
-  text-align:center;
+.copyright {
+  color: rgb(77, 8, 8);
+  text-align: center;
 }
-a.copyRight2{
-  color:black;
+a.copyRight2 {
+  color: black;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
@@ -566,7 +582,7 @@ a.copyRight2{
   }
   .secondPage_search {
     border: 1px solid rgb(255, 244, 241);
-    width:500px ;
+    width: 500px;
     border-radius: 10px;
     padding: 5px 5px;
     background-color: rgb(250, 250, 250);
